# xmc

./: .gitignore  README.md  pyproject.toml
src/explainable_malware_classifier/: __init__.py  __main__.py  preprocessor.py  settings.py  utils.py
src/explainable_malware_classifier/classifiers/: __init__.py  base.py  brf.py  manager.py  mlp.py  utils.py  xgb.py
src/explainable_malware_classifier/datasets/drzehra/: api_calls.csv
src/explainable_malware_classifier/explainers/: base.py  brf.py  mlp.py  xgb.py
src/xmc/: __main__.py  exceptions.py  preprocessor.py  settings.py  thesis.mplstyle  utils.py
src/xmc/classifiers/: base.py  brf.py  mlp.py  utils.py  xgb.py
src/xmc/datasets/drzehra/: labels.csv
src/xmc/explainers/: base.py  brf.py  mlp.py  xgb.py
src/xmc/explainers/explanations/brf_1k/anchors/adware/instance_1049/: explanation_general.json  explanation_general.txt  explanation_strict.json  explanation_strict.txt
src/xmc/explainers/explanations/brf_1k/anchors/adware/instance_187/: explanation_general.json  explanation_general.txt  explanation_strict.json  explanation_strict.txt
src/xmc/explainers/explanations/brf_1k/anchors/adware/instance_2360/: explanation_general.json  explanation_general.txt  explanation_strict.json  explanation_strict.txt
src/xmc/explainers/explanations/brf_1k/anchors/adware/instance_406/: explanation_general.json  explanation_general.txt  explanation_strict.json  explanation_strict.txt
src/xmc/explainers/explanations/brf_1k/anchors/adware/instance_500/: explanation_general.json  explanation_general.txt  explanation_strict.json  explanation_strict.txt
src/xmc/explainers/explanations/brf_1k/anchors/backdoor/instance_170/: explanation_general.json  explanation_general.txt  explanation_strict.json  explanation_strict.txt
src/xmc/explainers/explanations/brf_1k/anchors/backdoor/instance_293/: explanation_general.txt  explanation_strict.json  explanation_strict.txt
src/xmc/explainers/explanations/brf_1k/anchors/backdoor/instance_3640/: explanation_general.json  explanation_general.txt  explanation_strict.json  explanation_strict.txt
src/xmc/explainers/explanations/brf_1k/anchors/backdoor/instance_423/: explanation_general.json  explanation_general.txt  explanation_strict.txt
src/xmc/explainers/explanations/brf_1k/anchors/backdoor/instance_817/: explanation_general.json  (+3 more)
(+669 files in other folders)
