[project]
name = "explainable-malware-classifier"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Viktor Bojda", email = "viktorbojda17@gmail.com" }
]
dependencies = [
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "black>=24.10.0",
    "imbalanced-learn>=0.12.4",
    "joblib>=1.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/explainable_malware_classifier"]
