[project]
name = "xmc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Viktor Bojda", email = "viktorbojda17@gmail.com" }
]
dependencies = [
    "scikit-learn~=1.5.2",
    "pandas~=2.2.3",
    "matplotlib~=3.9.2",
    "black~=24.10.0",
    "imbalanced-learn~=0.12.4",
    "joblib~=1.4.2",
    "xgboost~=3.0.0",
    "cupy-cuda12x~=13.3.0",
    "cudf-cu12>=24.12.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "optuna>=4.2.1",
    "setuptools>=78.1.0",
    "cython>=3.0.12",
    "alibi>=0.9.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
shap = ["shap~=0.47"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.dependencies]
cudf-cu12 = { version = "*", index = "https://pypi.nvidia.com" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/xmc"]
